# GroundedAI

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: lint.yml  unittest.yaml
.github/workflows/: lint.yml
GroundedAI/: config.json
GroundedAI/callbacks/: callbacks.py
GroundedAI/chains/: chains.py  conversational_retrieval_chain.py
GroundedAI/chats/: chats.py  chats_classic.py
GroundedAI/document_loaders/: CSV_loader.py
GroundedAI/embeddings/: embeddings.py
GroundedAI/evaluators/: ragas.py
GroundedAI/llms/: llms.py
GroundedAI/prompt_templates/: contextualize_question_prompt_templates.py  rag_prompt_templates.py  rerank_templates.py
GroundedAI/rags/: batch_rags.py  rags.py
GroundedAI/retrievers/: base.py  ensemble_retriever.py  merger_retriever.py  simple_retriever.py
GroundedAI/utils/: citation.py  config_utils.py  load_env_keys.py  word_processing.py
GroundedAI/vector_stores/: base.py  elastic_search.py  faiss.py
dependencies/: grounded-AI.yml
scripts/: LLM_QAGeneration_ground_truths.py  README.md  rag_eval.py
src/: config.json
src/chats/: chats_classic.py
src/document_loaders/: CSV_loader.py
src/embeddings/: embeddings.py
src/prompt_templates/: contextualize_question_prompt_templates.py  rag_prompt_templates.py
src/rags/: rags.py
src/utils/: config_utils.py  word_processing.py
src/vector_stores/: base.py  elastic_search.py
tests/GroundedAI/llms/: test_llms.py
